--- a/styles/index.css
+++ b/styles/index.css
@@ -7,6 +7,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: -50px;
 }
 
 .cell {
@@ -69,3 +70,13 @@ body {
   font-size: 3rem;
 }
 
+.status-line {
+  color: gray;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.5rem;
+}
+
+.timer {
+  margin-bottom: 1rem;
+}
